--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -10,6 +10,11 @@
     <height>436</height>
    </rect>
   </property>
+  <property name="font">
+   <font>
+    <pointsize>26</pointsize>
+   </font>
+  </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
@@ -40,6 +45,16 @@
         <property name="text">
          <string>工具</string>
         </property>
+        <property name="icon">
+         <iconset resource="resource.qrc">
+          <normaloff>:/images/images/tools.png</normaloff>:/images/images/tools.png</iconset>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>64</width>
+          <height>64</height>
+         </size>
+        </property>
        </widget>
       </item>
       <item row="0" column="0">
@@ -52,6 +67,16 @@
         </property>
         <property name="text">
          <string>算法</string>
+        </property>
+        <property name="icon">
+         <iconset resource="resource.qrc">
+          <normaloff>:/images/images/algs.png</normaloff>:/images/images/algs.png</iconset>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>64</width>
+          <height>64</height>
+         </size>
         </property>
        </widget>
       </item>
@@ -66,6 +91,16 @@
         <property name="text">
          <string>。。。</string>
         </property>
+        <property name="icon">
+         <iconset resource="resource.qrc">
+          <normaloff>:/images/images/DL.png</normaloff>:/images/images/DL.png</iconset>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>64</width>
+          <height>64</height>
+         </size>
+        </property>
        </widget>
       </item>
       <item row="1" column="1">
@@ -79,6 +114,16 @@
         <property name="text">
          <string>。。。</string>
         </property>
+        <property name="icon">
+         <iconset resource="resource.qrc">
+          <normaloff>:/images/images/flows.png</normaloff>:/images/images/flows.png</iconset>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>64</width>
+          <height>64</height>
+         </size>
+        </property>
        </widget>
       </item>
      </layout>
@@ -91,12 +136,14 @@
      <x>0</x>
      <y>0</y>
      <width>682</width>
-     <height>37</height>
+     <height>24</height>
     </rect>
    </property>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
- <resources/>
+ <resources>
+  <include location="resource.qrc"/>
+ </resources>
  <connections/>
 </ui>
