--- a/AlgLineDetection.ui
+++ b/AlgLineDetection.ui
@@ -36,7 +36,7 @@
     <number>2</number>
    </property>
    <item>
-    <widget class="QWidget" name="imgWidget" native="true">
+    <widget class="ImagesViewer" name="imagesViewer" native="true">
      <layout class="QVBoxLayout" name="verticalLayout_2">
       <property name="leftMargin">
        <number>2</number>
@@ -50,9 +50,6 @@
       <property name="bottomMargin">
        <number>2</number>
       </property>
-      <item>
-       <widget class="QWGraphicsView" name="graphicsView"/>
-      </item>
      </layout>
     </widget>
    </item>
@@ -620,26 +617,16 @@
          <property name="bottomMargin">
           <number>2</number>
          </property>
-         <item row="1" column="3">
-          <widget class="QPushButton" name="saveBtn">
+         <item row="1" column="2">
+          <widget class="QPushButton" name="chooseBtn">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
              <horstretch>0</horstretch>
              <verstretch>0</verstretch>
             </sizepolicy>
            </property>
-           <property name="text">
-            <string>保存结果</string>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="2">
-          <widget class="QPushButton" name="chooseBtn">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
+           <property name="focusPolicy">
+            <enum>Qt::NoFocus</enum>
            </property>
            <property name="text">
             <string>选择图片</string>
@@ -711,9 +698,10 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>QWGraphicsView</class>
-   <extends>QGraphicsView</extends>
-   <header location="global">QWGraphicsView.h</header>
+   <class>ImagesViewer</class>
+   <extends>QWidget</extends>
+   <header location="global">imagesviewer.h</header>
+   <container>1</container>
   </customwidget>
  </customwidgets>
  <resources/>
