二值化检测界面优化

--- a/AlgThreshold.ui
+++ b/AlgThreshold.ui
@@ -66,36 +66,13 @@
          <string>参数</string>
         </property>
         <layout class="QGridLayout" name="gridLayout">
-         <item row="0" column="0">
-          <widget class="QLabel" name="label">
-           <property name="text">
-            <string>阈值</string>
-           </property>
-          </widget>
-         </item>
-         <item row="0" column="1">
-          <widget class="QSlider" name="thresholdValue">
-           <property name="maximum">
-            <number>255</number>
-           </property>
-           <property name="value">
-            <number>125</number>
-           </property>
-           <property name="orientation">
-            <enum>Qt::Horizontal</enum>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="1">
-          <widget class="QSlider" name="maxValue">
+         <item row="1" column="1" colspan="2">
+          <widget class="QSpinBox" name="maxValue">
            <property name="maximum">
             <number>255</number>
            </property>
            <property name="value">
             <number>255</number>
-           </property>
-           <property name="orientation">
-            <enum>Qt::Horizontal</enum>
            </property>
           </widget>
          </item>
@@ -106,8 +83,32 @@
            </property>
           </widget>
          </item>
-         <item row="3" column="1">
-          <widget class="QComboBox" name="autoTypes"/>
+         <item row="3" column="0">
+          <widget class="QLabel" name="label_4">
+           <property name="text">
+            <string>自动类型</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="0">
+          <widget class="QLabel" name="label">
+           <property name="text">
+            <string>阈值</string>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="1" colspan="2">
+          <widget class="QComboBox" name="thresholdTypes"/>
+         </item>
+         <item row="0" column="1" colspan="2">
+          <widget class="QSpinBox" name="thresholdValue">
+           <property name="maximum">
+            <number>255</number>
+           </property>
+           <property name="value">
+            <number>125</number>
+           </property>
+          </widget>
          </item>
          <item row="1" column="0">
           <widget class="QLabel" name="label_2">
@@ -116,15 +117,8 @@
            </property>
           </widget>
          </item>
-         <item row="3" column="0">
-          <widget class="QLabel" name="label_4">
-           <property name="text">
-            <string>自动类型</string>
-           </property>
-          </widget>
-         </item>
-         <item row="2" column="1">
-          <widget class="QComboBox" name="thresholdTypes"/>
+         <item row="3" column="1" colspan="2">
+          <widget class="QComboBox" name="autoTypes"/>
          </item>
         </layout>
        </widget>
