--- a/AlgsPage.ui
+++ b/AlgsPage.ui
@@ -55,13 +55,31 @@
         <property name="currentIndex">
          <number>0</number>
         </property>
+        <widget class="QWidget" name="baseOperate">
+         <property name="geometry">
+          <rect>
+           <x>0</x>
+           <y>0</y>
+           <width>268</width>
+           <height>335</height>
+          </rect>
+         </property>
+         <attribute name="label">
+          <string>基础操作</string>
+         </attribute>
+         <layout class="QVBoxLayout" name="verticalLayout">
+          <item>
+           <widget class="QListWidget" name="baseOperateItems"/>
+          </item>
+         </layout>
+        </widget>
         <widget class="QWidget" name="objectDetection">
          <property name="geometry">
           <rect>
            <x>0</x>
            <y>0</y>
            <width>260</width>
-           <height>363</height>
+           <height>335</height>
           </rect>
          </property>
          <property name="sizePolicy">
@@ -116,8 +134,8 @@
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>115</width>
-           <height>363</height>
+           <width>122</width>
+           <height>335</height>
           </rect>
          </property>
          <property name="sizePolicy">
