--- a/DLPage.ui
+++ b/DLPage.ui
@@ -50,18 +50,52 @@
          <property name="verticalSpacing">
           <number>8</number>
          </property>
-         <item row="4" column="1">
-          <widget class="QPushButton" name="chooseSourceBtn">
+         <item row="10" column="1">
+          <widget class="QPlainTextEdit" name="logPlanText">
+           <property name="lineWrapMode">
+            <enum>QPlainTextEdit::WidgetWidth</enum>
+           </property>
+           <property name="readOnly">
+            <bool>true</bool>
+           </property>
+           <property name="maximumBlockCount">
+            <number>100</number>
+           </property>
+          </widget>
+         </item>
+         <item row="7" column="1">
+          <widget class="QPushButton" name="initBtn">
            <property name="focusPolicy">
             <enum>Qt::NoFocus</enum>
            </property>
            <property name="text">
-            <string>请选择待检测文件</string>
+            <string>初始化</string>
            </property>
           </widget>
          </item>
-         <item row="1" column="1">
-          <widget class="QComboBox" name="referModeCombo"/>
+         <item row="7" column="0">
+          <widget class="QLabel" name="label_4">
+           <property name="text">
+            <string>操作</string>
+           </property>
+          </widget>
+         </item>
+         <item row="10" column="0">
+          <widget class="QLabel" name="label_7">
+           <property name="text">
+            <string>日志</string>
+           </property>
+           <property name="alignment">
+            <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="0">
+          <widget class="QLabel" name="label">
+           <property name="text">
+            <string>模型</string>
+           </property>
+          </widget>
          </item>
          <item row="2" column="1">
           <widget class="QToolButton" name="chooseModelBtn">
@@ -76,30 +110,10 @@
            </property>
           </widget>
          </item>
-         <item row="0" column="1">
-          <widget class="QComboBox" name="modelTypesCombo"/>
-         </item>
-         <item row="5" column="1">
-          <widget class="QPushButton" name="initBtn">
-           <property name="focusPolicy">
-            <enum>Qt::NoFocus</enum>
-           </property>
+         <item row="3" column="0">
+          <widget class="QLabel" name="label_2">
            <property name="text">
-            <string>初始化</string>
-           </property>
-          </widget>
-         </item>
-         <item row="5" column="0">
-          <widget class="QLabel" name="label_4">
-           <property name="text">
-            <string>操作</string>
-           </property>
-          </widget>
-         </item>
-         <item row="2" column="0">
-          <widget class="QLabel" name="label">
-           <property name="text">
-            <string>模型</string>
+            <string>标签</string>
            </property>
           </widget>
          </item>
@@ -119,6 +133,30 @@
            </property>
           </widget>
          </item>
+         <item row="9" column="1">
+          <widget class="QPushButton" name="startBtn">
+           <property name="focusPolicy">
+            <enum>Qt::NoFocus</enum>
+           </property>
+           <property name="text">
+            <string>开始</string>
+           </property>
+          </widget>
+         </item>
+         <item row="7" column="2">
+          <widget class="QToolButton" name="clearInit">
+           <property name="text">
+            <string>...</string>
+           </property>
+           <property name="icon">
+            <iconset resource="resource.qrc">
+             <normaloff>:/images/images/clear-l.png</normaloff>:/images/images/clear-l.png</iconset>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="1">
+          <widget class="QComboBox" name="referModeCombo"/>
+         </item>
          <item row="1" column="0">
           <widget class="QLabel" name="label_6">
            <property name="text">
@@ -126,20 +164,13 @@
            </property>
           </widget>
          </item>
-         <item row="3" column="0">
-          <widget class="QLabel" name="label_2">
-           <property name="text">
-            <string>标签</string>
-           </property>
-          </widget>
+         <item row="0" column="1">
+          <widget class="QComboBox" name="modelTypesCombo"/>
          </item>
-         <item row="7" column="1">
-          <widget class="QPushButton" name="startBtn">
-           <property name="focusPolicy">
-            <enum>Qt::NoFocus</enum>
-           </property>
+         <item row="6" column="0">
+          <widget class="QLabel" name="label_8">
            <property name="text">
-            <string>开始</string>
+            <string>置信度</string>
            </property>
           </widget>
          </item>
@@ -157,6 +188,32 @@
            </property>
           </widget>
          </item>
+         <item row="4" column="1">
+          <widget class="QPushButton" name="chooseSourceBtn">
+           <property name="focusPolicy">
+            <enum>Qt::NoFocus</enum>
+           </property>
+           <property name="text">
+            <string>请选择待检测资源</string>
+           </property>
+          </widget>
+         </item>
+         <item row="6" column="1">
+          <widget class="QDoubleSpinBox" name="confSpinBox">
+           <property name="minimum">
+            <double>0.010000000000000</double>
+           </property>
+           <property name="maximum">
+            <double>1.000000000000000</double>
+           </property>
+           <property name="singleStep">
+            <double>0.100000000000000</double>
+           </property>
+           <property name="value">
+            <double>0.250000000000000</double>
+           </property>
+          </widget>
+         </item>
          <item row="3" column="2">
           <widget class="QToolButton" name="clearLabelsBtn">
            <property name="text">
@@ -168,26 +225,23 @@
            </property>
           </widget>
          </item>
-         <item row="8" column="1">
-          <widget class="QPlainTextEdit" name="logPlanText">
-           <property name="lineWrapMode">
-            <enum>QPlainTextEdit::WidgetWidth</enum>
-           </property>
-           <property name="readOnly">
-            <bool>true</bool>
-           </property>
-           <property name="maximumBlockCount">
-            <number>100</number>
+         <item row="5" column="0">
+          <widget class="QLabel" name="label_9">
+           <property name="text">
+            <string>资源尺寸</string>
            </property>
           </widget>
          </item>
-         <item row="8" column="0">
-          <widget class="QLabel" name="label_7">
-           <property name="text">
-            <string>日志</string>
+         <item row="5" column="1">
+          <widget class="QSpinBox" name="resourceSizeSpinBox">
+           <property name="minimum">
+            <number>1</number>
            </property>
-           <property name="alignment">
-            <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+           <property name="maximum">
+            <number>99999</number>
+           </property>
+           <property name="value">
+            <number>640</number>
            </property>
           </widget>
          </item>
